--script do banco

CREATE TABLE PRODUCT (
                         productCode VARCHAR(255) PRIMARY KEY,
                         amountStored INT,
                         minimumAmount INT,
                         location VARCHAR(255),
                         enterDate INT
);

CREATE TABLE AUDIT_MESSAGE (
                               id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                               productCode VARCHAR(255) NOT NULL,
                               operation VARCHAR(255) NOT NULL,
                               timeStamp TIMESTAMP NOT NULL
);


