package br.inatel.dm110.api;

import java.util.List;

public interface AuditInterface {

    public List<AuditMessageTO> getAllAudits();
}
