package br.inatel.dm110.interfaces;

public interface AuditLocal extends Audit{
}
