package br.inatel.dm110.interfaces;

public interface AuditRemote extends Audit{
}
