package br.inatel.dm110.interfaces;

public interface StoreLocal extends Store {
}
