package br.inatel.dm110.interfaces;

public interface StoreRemote extends Store {
}
