@startuml
interface AuditInterface {
    + List<AuditMessageTO> getAllAudits()
}

class AuditMessageTO {
    - LocalDateTime timeStamp
    - String message
    + AuditMessageTO(String productCode, String operation, LocalDateTime timeStamp)
}

class ProductTO {
    - String productCode
    - int amountStored
    - int minimumAmount
    - String location
    - int enterDate
    + ProductTO(String productCode, int amountStored, int minimumAmount, String location, int enterDate)
}

interface StoreInterface {
    + Response storeNewProduct(ProductTO product)
    + Response getProduct(String productCode)
    + List<ProductTO> getAllProducts()
    + Response updateProduct(ProductTO product, String productCode)
    + Response deleteProduct(String productCode)
}

interface Audit {
    + void saveAudit(AuditMessageTO message)
    + List<AuditMessageTO> getAllAudits()
}

interface AuditLocal extends Audit {
}

interface AuditRemote extends Audit {
}

interface Store {
    + ProductTO storeNewProduct(ProductTO product)
    + ProductTO getProduct(String productCode)
    + List<ProductTO> getAllProducts()
    + ProductTO updateProduct(ProductTO product, String productCode)
    + void deleteProduct(String productCode)
}

interface StoreLocal extends Store {
}

interface StoreRemote extends Store {
}

class AuditBean {
    - Logger log
    - EntityManager em
    + void saveAudit(AuditMessageTO message)
    + List<AuditMessageTO> getAllAudits()
}

class AuditQueueSender {
    - Logger log
    - ConnectionFactory
    - Queue
    + void sendTextMessage(AuditMessageTO)
}

class StoreBean {
    - Logger log
    - EntityManager em
    - AuditQueueSender queueSender
    + ProductTO storeNewProduct(ProductTO product)
    + ProductTO getProduct(String productCode)
    + List<ProductTO> getAllProducts()
    + ProductTO updateProduct(ProductTO product, String productCode)
    + void deleteProduct(String productCode)
}

class AuditMessage {
    - int id
    - String productCode
    - String operation
    - LocalDateTime timeStamp
    + AuditMessage(String productCode, String operation, LocalDateTime timeStamp)
}

class Product {
    - String productCode
    - int amountStored
    - int minimumAmount
    - String location
    - int enterDate
}

class StoreConverter {
    + static ProductTO toProductTO(Product)
    + static List<ProductTO> toProductTOList(List<Product> productList)
    + static Product toProduct(ProductTO)
}

class AuditConverter {
    + static AuditMessageTO toAuditMessageTO(AuditMessage)
    + static List<AuditMessageTO> toAuditMessageTOList(List<AuditMessage> auditMessageList)
}

class AuditResource {
    - AuditLocal auditBean
    + List<AuditMessageTO> getAllAudits()
}

class StoreResource {
    - StoreLocal storeBean
    + Response storeNewProduct(ProductTO product)
    + Response getProduct(String productCode)
    + List<ProductTO> getAllProducts()
    + Response updateProduct(ProductTO product, String productCode)
    + Response deleteProduct(String productCode)
}

class RestApplication {
    + Set<Class<?>> getClasses()
}

class AuditQueueMDB {
    - Logger log
    - AuditLocal auditBean
    + void onMessage(Message)
}

AuditBean --> AuditLocal
AuditBean --> AuditRemote
AuditQueueSender --> AuditBean

StoreBean --> StoreLocal
StoreBean --> StoreRemote
StoreBean --> AuditQueueSender

AuditMessage --> AuditMessageTO
Product --> ProductTO
AuditConverter --> AuditMessage
StoreConverter --> Product

AuditResource --> AuditLocal
StoreResource --> StoreLocal

AuditQueueMDB --> AuditLocal
@enduml
